v2/test-data/elab/literal/int-errors.snapshot
exit status: 0

stdout = """
#error : Int
#error : Int
305441741 : Int
#error : Int
#error : Int
#error : Int
"""

stderr = """
error: Invalid integer literal: lexical parse error: 'invalid digit found' at index 4
  ┌─ test-data/elab/literal/int-errors.pion:1:8
  │
1 │ #check 1234abcd;
  │        ^^^^^^^^

error: Invalid integer literal: lexical parse error: 'invalid digit found' at index 3
  ┌─ test-data/elab/literal/int-errors.pion:2:8
  │
2 │ #check 0b1234abcd;
  │        ^^^^^^^^^^

error: Invalid integer literal: lexical parse error: 'numeric overflow occurred' at index 10
  ┌─ test-data/elab/literal/int-errors.pion:5:8
  │
5 │ #check 999999999999999999999;
  │        ^^^^^^^^^^^^^^^^^^^^^

error: Invalid integer literal: lexical parse error: 'numeric overflow occurred' at index 33
  ┌─ test-data/elab/literal/int-errors.pion:6:8
  │
6 │ #check 0b1111111111111111111111111111111111111111111111111111111111111111111111;
  │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid integer literal: lexical parse error: 'numeric overflow occurred' at index 9
  ┌─ test-data/elab/literal/int-errors.pion:7:8
  │
7 │ #check 0xfffffffffffffffffffffffffffffffffffffff;
  │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
"""
